syntax = "proto3";
package com.example.grpc_in_java;

option  java_multiple_files = true;
option  java_package = "com.example.grpc_in_java";


service GreetingService {
  rpc greeting(GreetingMessage) returns (GreetingResponse){}
}

message GreetingMessage  {
  string message = 1;
}

message GreetingResponse {
  string message = 1;
}
